--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ project.version = "0.9.0"
 
 repositories {
     jcenter()
-	flatDir { dirs 'lib' }
+	flatDir { dirs project.getProjectDir().toString() + '/lib' }
 }
 
 dependencies 
@@ -45,7 +45,7 @@ if (JavaVersion.current().isJava8Compatible()) {
 
 gwt {
     gwtVersion='2.7.0'
-    modules 'de.esoco.GEWTChart'
+    modules 'de.esoco.GewtChart'
 }
 
 jar { from sourceSets.main.allJava }
