--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 	flatDir { dirs project.getProjectDir().toString() + '/lib' }
 }
 
-dependencies 
+dependencies
 {
 	if (project(':gewt').getProjectDir().exists())
 	{
@@ -28,8 +28,8 @@ dependencies
 		compile 'de.esoco:gewt:1.+'
 	}
 
-	compile name: 'gwt-visualization'		
-	compile name: 'gwt-links-network'		
+	compile name: 'gwt-visualization'
+	compile name: 'gwt-links-network'
     testCompile 'junit:junit:4.+'
 }
 
@@ -41,6 +41,10 @@ if (JavaVersion.current().isJava8Compatible()) {
         	options.addStringOption('Xdoclint:none', '-quiet')
 		}
 	}
+}
+
+eclipse {
+    pathVariables '': file(getProjectDir())
 }
 
 gwt {
