--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,12 @@
 rootProject.name = "gewt-chart"
 
-include ':esoco-common'
-project(':esoco-common').projectDir = new File('../esoco-common')
+def baseProjects = [':esoco-common',':gewt']
 
-include ':gewt'
-project(':gewt').projectDir = new File('../gewt')
+baseProjects.each { projectName ->
+	def projectDir = new File("../${projectName.substring(1)}")
 
+	if (projectDir.exists()) {
+		include projectName
+		project(projectName).projectDir = projectDir
+	}
+}
