FRAMEWORK-211 (New Feature): Deploy framework projects to JCenter and adapt build files accordingly
Added sources to code JAR for GWT compiler

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ gwt {
     modules 'de.esoco.GewtChart'
 }
 
+// sources are need for the GWT compiler
+jar { from sourceSets.main.allSource }
+
 task sourceJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
     from sourceSets.main.allSource
