--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ git:
 
 install:
   - pushd .. 
+  - mkdir sdack
+  - cd sdack
   - git clone -b ${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} --depth 3 https://github.com/esoco/esoco-common
   - git clone -b ${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} --depth 3 https://github.com/esoco/gewt
   - popd
