--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ git:
   depth: 3
 
 install:
-  - pushd .. 
+  - pushd ../.. 
   - mkdir sdack
   - cd sdack
   - git clone -b ${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} --depth 3 https://github.com/esoco/esoco-common
